<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context="io.full.calculator.ui.MainActivity">

    <TextView
        android:id="@+id/operand1Line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="2342"
        android:maxLength="15"
        android:gravity="right"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/operatorLine"
        tools:text="+"
        android:maxLength="15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/operand2Line"
        android:layout_marginBottom="30dp"
        android:maxLength="15"
        android:text="@string/default_value"
        tools:text="123456789012345"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="38sp" />

</LinearLayout>
